# gladius

./: CMakeLists.txt  main.cpp
core/: platform.h  types.h
core/filesystem/: disk_file.h  file.h  filesystem.cpp  filesystem.h
core/logging/: logging.cpp  logging.h
core/math/: aabb.h  box2.h  box3.h  common_math.h  half.cpp  half.h  mat2.h  mat3.h  mat4.h  quat.h  vec2.h  vec3.h  vec4.h
core/memory/: lockfree_allocator_policy.h  memory_allocator.h
core/memory/allocators/: free_list_allocator.h  malloc_allocator.cpp  malloc_allocator.h  sized_allocator.h
core/memory/regions/: heap_region.h  stack_region.h
core/resources/: resource_pool.cpp  resource_pool.h
core/threading/: job.h  job_executor.cpp  job_executor.h  steal_queue.h
core/window/: window.cpp  window.h
core/window/nix/: nix_window.cpp
core/window/windows/: win_window.cpp
geometry/: transform_node.cpp  transform_node.h  visibility.cpp  visibility.h
geometry/space/: deformation.cpp  deformation.h  quad_tree.cpp  quad_tree.h  tree_node.cpp  tree_node.h
geometry/space/deforms/: spherical_deformation.cpp  spherical_deformation.h
gladius/: gladius.cpp  gladius.h
gladius/core/: json.h  platform.h  types.h
gladius/core/collections/: aligned_allocator.h  blocking_queue.h  concurrent_queue.h  lock_free_single_queue.h  steal_queue.h
gladius/core/collections/details/: tagged_ptr_dcas.h
gladius/core/filesystem/: disk_file.cpp  disk_file.h  file.h  filesystem.cpp  filesystem.h  json_file.cpp  json_file.h
gladius/core/logger/: logger.cpp  logger.h
gladius/core/logging/: logging.cpp  logging.h
gladius/core/math/: aabb.h  math_func.h
gladius/core/memory/: allocator.h  default_policies.h  memory_utils.h
gladius/core/memory/alloc_policies/: linear_alloc.h  linear_alloc_policy.h  lockfree_alloc.h  lockfree_alloc_policy.h  lockfree_pool.h  lockfree_pool_policy.h
gladius/core/memory/tagged_pointer/: tagged_ptr_packed.h
gladius/core/meta/: fixed_function.h  json.h  list.h  minmax.h  static_if.h  type_id.h
gladius/core/threading/: job.h  job_executor.cpp  job_executor.h  movable_atomic.h  steal_queue.h  weak_semaphore.h  worker.h  worker_pool.h
gladius/core/window/: window.cpp  window.h  window_win.cpp  window_xcb.cpp
gladius/ecs/: system.h
gladius/ecs/mt/: multithread_executor.h  single_thread_executor.h
gladius/ecs/storage/: component_storage.h
gladius/geometry/: visibility.h
gladius/graphics/render3d/: render3d.cpp  render3d.h  render3d_buffer.cpp  render3d_buffer.h  render3d_command_buffer.cpp  render3d_command_buffer.h  render3d_debug.cpp  render3d_debug.h  render3d_device.cpp  render3d_device.h  render3d_framebuffer.cpp  render3d_framebuffer.h  render3d_globals.h  render3d_macros.h  render3d_pipeline.cpp  render3d_pipeline.h  render3d_render_pass.cpp  render3d_render_pass.h  render3d_resources.cpp  render3d_resources.h  render3d_shader.cpp  render3d_shader.h  render3d_surface.cpp  render3d_surface.h  render3d_swapchain.cpp  render3d_swapchain.h  render3d_texture.cpp  render3d_texture.h  render3d_types.h  render3d_utils.cpp  render3d_utils.h  renderer3d.cpp  renderer3d.h
gladius/graphics/render3d/memory/: block.cpp  block.h  chunk.cpp  chunk.h  chunk_allocator.cpp  chunk_allocator.h  gpu_memory_allocator.cpp  gpu_memory_allocator.h
gladius/graphics/render3d/pipeline/: color_blend_attachment_state_desc.cpp  color_blend_attachment_state_desc.h  color_blend_state_desc.cpp  color_blend_state_desc.h  framebuffer_desc.cpp  framebuffer_desc.h  multisample_state_desc.cpp  multisample_state_desc.h  pipeline_desc.cpp  pipeline_desc.h  pipeline_factory.cpp  pipeline_factory.h  pipeline_utils.cpp  pipeline_utils.h  rasterization_state_desc.cpp  rasterization_state_desc.h  renderpass_desc.cpp  renderpass_desc.h  subpass_desc.cpp  subpass_desc.h  vertex_type.cpp  vertex_type.h  viewport_state_desc.cpp  viewport_state_desc.h
gladius/graphics/render3d/resources/: buffer.cpp  buffer.h  buffer_resource.h  framebuffer.cpp  framebuffer.h  framebuffer_resource.h  resource_macros.h  shander.cpp  shander.h  texture.cpp  texture.h  texture_resource.h
gladius/graphics/render3d/vulkan/: vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_debug.cpp  vulkan_debug.h  vulkan_device.cpp  vulkan_device.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_macros.h  vulkan_surface.cpp  vulkan_surface.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_utils.cpp  vulkan_utils.h
gladius/input/: user_input.h
gladius/network/: network.cpp  network.h
graphics/: render_context.cpp  render_context.h  rendered3d_debugger.cpp  renderer3d.cpp  renderer3d.h  renderer3d_common.h  renderer3d_resources.cpp  renderer3d_swapchain.cpp  renderer3d_texture.cpp  renderer3d_texture.h  renderer3d_utils.cpp
input/: user_input.cpp  user_input.h
input/nix/: nix_user_input.cpp
input/win/: win_user_input.cpp
